# varius

./: .gitignore
Qt-scripting-test/: .cproject  .project  Main.cpp  Makefile  MyObject.h  MyObject2.h  Qt-scripting-test.pro  genmakefile.sh
RC-dates-parser/: Common.h  Makefile  Scanner.h  gen.cfg.py  main.cpp  rc-dates-parser
android/fuzzyc/: .project  AndroidManifest.xml
android/fuzzyc/res/values/: strings.xml
android/fuzzyc/src/org/fuzzyc/: Libfuzzyc.java  MyActivity.java  MyView.java
asycgl/: CMakeLists.txt  Descriptors.h  main.cpp
asycgl/include/anki/: Config.h
asycgl/include/anki/gl/: Descriptors.h  GlProgram.h
asycgl/src/gl/: GlProgram.cpp
asycgl/src/util/: CMakeLists.txt  Makefile  cmake_install.cmake
boost-property-tree/: Main.cpp  Makefile  boost-property-tree  gen.cfg.py  test.xml
boost-python-embedding/: .cproject  .project  BoostPythonInterfaces.cpp  Main.cpp  Makefile  README  ReturnReference.h  ScriptingEngine.cpp  ScriptingEngine.h  StaticCast.h  Vec.h  Vec3.bpi.h  Vec3.h  Vec4.bpi.h  Vec4.h  gen.cfg.py  test.py
bullet-demos/character/: Character.cpp  MyApplication.cpp  MyApplication.h
bullet-demos/common/: Application.cpp  Application.h  DebugDraw.cpp  DebugDraw.h  gen.cfg.py
bullet-demos/particle-emitter/: .project  Main.cpp
bullet-demos/ragdoll/: .cproject  .project  test
config/: .shiftspace2underscore.sh
config/.bash_configs/: common  home
config/.vim/: arm.vim
config/.vim/colors/: godlike.vim
config/.vim/plugin/: zzzzzgodlike.vim
config/.vim/syntax/: glsl.vim
gBuildSystem/: gbs.py
glf/: CMakeLists.txt
glf/examples/: example0.c
glf/examples/shaders/: varying_color.frag.glsl
glf/include/glf/: bo.h  common.h  config.h.cmake  fbo.h  fs.h  gl.h  glf.h  image.h  linux_mallinfo.h  log.h  math.h  nativegl.h  program.h  texture.h  time.h  vao.h
glf/src/glf/: bo.c  fbo.c  fs.c  gl.c  image.c  list.c  log.c  math.c  nativegl.c  nativegl_x11egl.c  nativegl_x11glx.c  program.c  texture.c  time.c  vao.c
hashmap-of-ptr-to-char/: .cproject  .project  Main.cpp  Makefile  gen.cfg.py
libfreetype/: .cproject  .project  img.tga
libfreetype/Debug/: libfreetype-test  makefile  objects.mk
libfreetype/Debug/src/: libfreetype-test.d  subdir.mk
libfreetype/src/: libfreetype-test.c
libpng-test/: .project  README  main.cpp
proto/allocator/: CMakeLists.txt  Main.cpp
proto/asycgl/: CMakeLists.txt
proto/asycgl/SDL2/: CMakeLists.txt
proto/asycgl/include/anki/gl/: Common.h  Descriptors.h
proto/bullet_demos/character/: .cproject  .project  Character.h  Main.cpp  Makefile
proto/bullet_demos/common/: Physics.cpp  Physics.h
proto/bullet_demos/particle-emitter/: .cproject  Makefile  MyApplication.cpp  MyApplication.h  ParticleEmitter.h
proto/bullet_demos/ragdoll/: Main.cpp  Makefile  MyApplication.cpp  MyApplication.h  Ragdoll.cpp  Ragdoll.h
proto/libpng_test/: .cproject  Makefile  gen.cfg.py  libpng-test
proto/local-thread/: CMakeLists.txt  Main.cpp
proto/lua-embedding/: .CMakeLists.txt.swp  .Foo.hpp.swp  .Main.cpp.swo  .Main.cpp.swp
proto/lua_binding_gen/: CMakeLists.txt  Foo.xml  FooAutogen.h  Main.cpp  anki_lua_binding_gen.py
proto/lua_embeding/: CMakeLists.txt  Foo.cpp  Foo.hpp  Main.cpp  Main.cpp.bak  Vec2.h
proto/lua_embeding_2/: CMakeLists.txt  main.cpp
proto/ptr-vector/: CMakeLists.txt  main.cpp
proto/threading_asio/: .cproject  .project  Main.cpp  StdinListener.cpp  StdinListener.h  test
proto/visitor/: CMakeLists.txt  main.cpp
proto/webgl/: gl.js  index.html  test.frag  test.vert
proto/xml/: .Main.cpp.swp  CMakeLists.txt  Main.cpp
proto/zlib/: CMakeLists.txt  test.cpp
qFlipNormals/: MainWdg.py  MainWdg.ui  Ui_MainWdg.py  build.sh  qflipnormals.py  readme  resources.py  resources.qrc  resources_rc.py
test_gl/: CMakeLists.txt  main.c
threading-asio/: Makefile  gen.cfg.py
